Added test for InstanceRunAction